--- a/_posts/2016/2016-05-25-spring-io.md
+++ b/_posts/2016/2016-05-25-spring-io.md
@@ -25,7 +25,7 @@ Additionally, multiple security tools were mentioned or explained, including AST
 ## "From imperative to reactive", by Rossen Stoyanchev
 
 Rossen Stoyanchev ([@rstoya05](http://twitter.com/rstoya05)) is a member of Spring Framework's development team at [Pivotal](https://pivotal.io/). He and his colleague Stephane Maldini ([@smaldini](https://twitter.com/smaldini)) opened the second day with an interesting keynote about one of the main focus of the conference: reactive programming.
-{% image blog/blog-springio-1.jpg %}
+![](/assets/img/pages/blog/images/blog-springio-1.jpg)
 Later on, Mr. Stoyanchev's went into further detail on "From imperative to reactive". The main idea behind that talk was to design asynchronous APIs that allow applications to use fewer threads that don't block each other. One tool that helps doing that is [Reactor](http://projectreactor.io/), which is a [Spring](https://spring.io/) library.
 
 ## "Understanding microservice performance", by Rob Harrop
@@ -40,4 +40,4 @@ Mr. Harrop showed a couple of tiny web apps that included some interesting graph
 ## Conclusion
 
 During those two days I had the chance to enjoy a conference full of top-notch industry experts who shared their views and knowledge on Spring, microservices, and other related topics. It was a pleasant experience that I hope will be repeated again.
-{% image blog/blog-springio-2.jpg %}
+![](/assets/img/pages/blog/images/blog-springio-2.jpg)
