--- a/_posts/2016/2016-07-26-xconf-2016.md
+++ b/_posts/2016/2016-07-26-xconf-2016.md
@@ -43,12 +43,12 @@ One good thing I was able to take away with me, was to see that many companies u
 It was especially interesting to hear about the experience of introducing microservice architecture on such giant environment like [otto.de](http://otto.de)
 It is good to know that one of the leaders of the German e-commerce market follows the same principles as we are following in our team.
 
-{% image blog/blog-twitter-xconf-3.png %}
+![](/assets/img/pages/blog/images/blog-twitter-xconf-3.png)
 
 Another interesting topic was the infrastructure.
 At ePages, we have a quite sophisticated environmental structure.
 To manage this, we are already applying many techniques and tools described by  [Kief Morris](https://twitter.com/kief) in his presentation.
 
-{% image blog/blog-twitter-xconf-4.png %}
+![](/assets/img/pages/blog/images/blog-twitter-xconf-4.png)
 
 It was a nice day at the conference with a lot of input that can make our work more efficient.
