--- a/_posts/2016/2016-09-01-socrates.md
+++ b/_posts/2016/2016-09-01-socrates.md
@@ -83,7 +83,7 @@ Sunday was reserved for longer workshops:
 
 ## More than the usual conference!
 
-{% image blog/blog-socrates-group.jpg %}
+![](/assets/img/pages/blog/images/blog-socrates-group.jpg)
 
 Giving feedback to session hosts, other participants, or the organization team was quite easy as well: Every attendee received Kudo Cards that they could freely distribute with remarks, why they liked a session, or other things.
 Yet, the best part: The fully equipped conference hotel was located in a big beautiful national park, isolated by a forest from the surrounding world.
