--- a/_posts/2017/2017-05-16-ia-conference-2017.md
+++ b/_posts/2017/2017-05-16-ia-conference-2017.md
@@ -17,7 +17,7 @@ authors: ["Lena B."]
 Last week, I visited the IA Conference, the so called class reunion of the German speaking information architecture and user experience community.
 IA stands for *information architecture* and in short describes the structure of a website or application which should support the user's orientation.
 Sounds boring, right?
-The IA Conference was anything but boring! {% emoji sunglasses %}
+The IA Conference was anything but boring! 😎
 "Class reunion" - What a suitable description.
 The atmosphere was personal, open-minded and dynamic.
 Many curious people from all across Germany came together in order to learn and discuss about this year's topic *Smart Services*.
@@ -80,4 +80,4 @@ An environment, in which intelligent services take over more and more responsibi
 Of course, we are not exclusively talking to Alexa yet if we want to listen to music.
 And not everyone uses self-driving cars.
 However, for me the IA conference was super insightful and I am curious what the organizers will prepare for the next time.
-So, see you next year! {% emoji wink %}
+So, see you next year! 😉
