Update post images

--- a/_posts/2016/2016-09-01-socrates.md
+++ b/_posts/2016/2016-09-01-socrates.md
@@ -27,7 +27,7 @@ At the end of this ice breaker there was a pretty precise idea of what people ar
 
 ## Conference days
 
-{% image blog/blog-socrates.jpg 50% right %}
+{% image_custom image="assets/img/pages/blog/images/blog-socrates.jpg" width="50%" align="right" %}
 
 Friday and Saturday were [open spaces](https://en.wikipedia.org/wiki/Open_Space_Technology).
 Upfront around 15 meeting locations with initially empty time schedules (6x1 hour slots) were prepared as a supportive sessions' frame by the organization team.
