--- a/_posts/2016/2016-07-14-wiremock.md
+++ b/_posts/2016/2016-07-14-wiremock.md
@@ -22,7 +22,7 @@ In that case [gRPC](http://www.grpc.io/) might be an interesting alternative to 
 So, instead of managing a globally shared domain model, slowing down our development, we would rather let every service define its own view of the domain model in order to achieve loose coupling.
 Coupling, as Oliver Gierke correctly stated, is not binary.
 
-{% image blog/blog-wiremock-quote-gierke.jpg 100% left %}
+{% image_custom image="assets/img/pages/blog/images/blog-wiremock-quote-gierke.jpg" width="100%" align="left" %}
 
 > "If you don't want no coupling at all, don't let your systems
 > talk to each other". [@olivergierke](https://twitter.com/olivergierke/status/733603527549931520)
@@ -40,7 +40,7 @@ Let's test our microservices in integration, allowing us to verify the complete 
 This of course requires all services and their infrastructure to be up and running simultaneously.
 Think of integration tests failing mysteriously every few weeks...
 
-{% image blog/blog-wiremock-quote-honestupdate.jpg 100% left %}
+{% image_custom image="assets/img/pages/blog/images/blog-wiremock-quote-honestupdate.jpg" width="100%" align="left" %}
 
 > "We replaced our monolithic app with micro services so that every outage
 > could be more like a murder mystery" [@honest_update](https://twitter.com/honest_update/status/651897353889259520)
@@ -110,4 +110,3 @@ By default WireMock gets started on a random port, and we need to point our API 
 WireMock would happily serve all pre-recorded responses from the producer, given the same inputs and resource paths.
 
 **Happy microservice testing!**
-
