Update youtube video tags

--- a/_posts/2016/2016-09-23-rnd-day-2016.md
+++ b/_posts/2016/2016-09-23-rnd-day-2016.md
@@ -47,4 +47,4 @@ Just in time we were done for a sundowner and a cool drink.
 Together with the colleagues from all the other departments, we spent our evening in a nice beach club over the rooftops of Hamburg.
 If you'd like to have a taste of our day in pictures, don't miss out on **THIS**:
 
-{% youtube wNQ7B0rIB3g %}
+{% youtube_video video_id="wNQ7B0rIB3g" %}
