Solve some testing failures

--- a/_posts/2015/2015-09-15-rnd-day-2015.md
+++ b/_posts/2015/2015-09-15-rnd-day-2015.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "R&D Day 2015 in the spotlight"
+title: "R&amp;D Day 2015 in the spotlight"
 date: "2015-09-15 08:10:00"
 header_image: research.jpg
 category: tech-stories
@@ -14,7 +14,7 @@ Curtains up for these fantastic topics:
 
 ## Spotlight: ePages software architecture
 
-Team Black started the R&D Day presenting their approach on a new software architecture that should be the technical foundation for ePages in the years to come.
+Team Black started the R&amp;D Day presenting their approach on a new software architecture that should be the technical foundation for ePages in the years to come.
 
 ![](/assets/img/pages/blog/images/blog-rnd-architecture.jpg)
 
