--- a/_posts/2016/2016-09-23-rnd-day-2016.md
+++ b/_posts/2016/2016-09-23-rnd-day-2016.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "ePages R&D Day 2016"
+title: "ePages R&amp;D Day 2016"
 date: "2016-09-23 06:08:00"
 header_image: roadmap.jpg
 category: events
 authors: ["Birgit"]
 ---
 
-Last week, we hosted another R&D Day at ePages, that provided great insights into the future of our software.
+Last week, we hosted another R&amp;D Day at ePages, that provided great insights into the future of our software.
 This year's focus was clearly on new technologies.
 Developers from all company locations gathered together in Hamburg to present their latest development results as well as important tasks that are in the pipeline for the upcoming months.
 
