Add first bunch of header images

--- a/_posts/2015/2015-09-02-barcamp-kiel-2015.md
+++ b/_posts/2015/2015-09-02-barcamp-kiel-2015.md
@@ -2,6 +2,7 @@
 layout: post
 title: "BarCamp Kiel 2015 - A short review"
 date: "2015-09-02 14:51:00"
+header_image: barcamp-kiel.jpg
 category: events
 authors: ["David"]
 ---
