--- a/_posts/2015/2015-11-30-wjax2015-agile-day.md
+++ b/_posts/2015/2015-11-30-wjax2015-agile-day.md
@@ -2,6 +2,7 @@
 layout: post
 title: "W-JAX 2015 Retrospect Part 1: Agile Day"
 date: "2015-11-30 12:00:00"
+header_image: wjax-conf.jpg
 category: events
 authors: ["Silvio"]
 ---
