Change old blog urls to new structure

--- a/_posts/2016/2016-05-25-spring-io.md
+++ b/_posts/2016/2016-05-25-spring-io.md
@@ -14,7 +14,7 @@ As you might expect, I didn't find all activities equally interesting or fun, so
 
 ## "Cloud Native Java", by Josh Long
 
-My colleague Mathias spoke about the same talk on his [post related to GeeCON Kraków](https://developer.epages.com/blog/2016/05/20/geecon.html), so I won't repeat what he said, but that was undoubtedly one of the highlights of the conference. In fact, a Josh Long ([@starbuxman](https://twitter.com/starbuxman)) quote was included in the official Spring I/O t-shirt: "Make Jar not War".
+My colleague Mathias spoke about the same talk on his [post related to GeeCON Kraków](/blog/events/geecon/), so I won't repeat what he said, but that was undoubtedly one of the highlights of the conference. In fact, a Josh Long ([@starbuxman](https://twitter.com/starbuxman)) quote was included in the official Spring I/O t-shirt: "Make Jar not War".
 
 ## "Securing RESTFul services with Spring HATEOAS and Hdiv", by Roberto Velasco
 
