--- a/_posts/2017/2017-05-16-ia-conference-2017.md
+++ b/_posts/2017/2017-05-16-ia-conference-2017.md
@@ -31,14 +31,14 @@ According to many excellent speakers, such as [Klaas Wilhelm Bollhoefer](https:/
 Barriers of use in the development of any kind of product are decreasing over time.
 Did you know that an algorithm has been used to generate the shape for each of the 10,000 gypsum fiber acoustic panels of the walls of the newly opened concert hall in Hamburg, the Elbphilharmonie?
 
-![](/assets/img/pages/blog/images/blog-elbphilharmonie.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-elbphilharmonie.jpg" %}
 
 Moreover, there are self-driving cars or [Prime Air](https://www.amazon.com/Amazon-Prime-Air/b?node=8037720011){:target="_blank"} for instance, a delivery system from Amazon designed to safely get packages to customers in 30 minutes or less using drones.
 The more new and innovative products appear on the market, the more the mental models of the customers will change and with them their behavior and expectations.
 As Rainer Sax would point: "How could cleaning robots clean a room, when the floor is full of stuff?"
 We increasingly align our behavior to the systems' requirements.
 
-![](/assets/img/pages/blog/images/blog-robot.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-robot.jpg" %}
 
 ## Assistants of our lives
 
