Add more image adjustments for 2016

--- a/_posts/2016/2016-07-14-wiremock.md
+++ b/_posts/2016/2016-07-14-wiremock.md
@@ -7,6 +7,13 @@ category: tech-stories
 authors: ["Oliver T."]
 ---
 
+<style>
+
+.twitter-tweet {
+  margin: auto;
+}
+</style>
+
 There is a lot of buzz about microservices these days, and here is our take on managing decoupled microservices, while still keeping confident in REST API compatibility.
 
 One of the SOA missteps was trying to enforce a canonical domain model, which lead to bloated domain objects, that still would not fit all use cases and needed some sort of central management.
@@ -22,10 +29,8 @@ In that case [gRPC](http://www.grpc.io/){:target="_blank"} might be an interesti
 So, instead of managing a globally shared domain model, slowing down our development, we would rather let every service define its own view of the domain model in order to achieve loose coupling.
 Coupling, as Oliver Gierke correctly stated, is not binary.
 
-{% image_custom image="/assets/img/pages/blog/images/blog-wiremock-quote-gierke.jpg" width="100" align="left" %}
-
-> "If you don't want no coupling at all, don't let your systems
-> talk to each other". [@olivergierke](https://twitter.com/olivergierke/status/733603527549931520){:target="_blank"}
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Still surprised people consider decoupling to be a binary thing. If you don&#39;t want no coupling at all, don&#39;t let systems talk to each other.</p>&mdash; Oliver Gierke 🥁&amp;👨‍💻 (@olivergierke) <a href="https://twitter.com/olivergierke/status/733603527549931520?ref_src=twsrc%5Etfw">May 20, 2016</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Of course you need communication between your services, and of course this introduces some coupling.
 But, when opening an API to external consumers, it becomes a shared concern that you need to manage.
@@ -40,10 +45,8 @@ Let's test our microservices in integration, allowing us to verify the complete 
 This of course requires all services and their infrastructure to be up and running simultaneously.
 Think of integration tests failing mysteriously every few weeks...
 
-{% image_custom image="/assets/img/pages/blog/images/blog-wiremock-quote-honestupdate.jpg" width="100" align="left" %}
-
-> "We replaced our monolithic app with micro services so that every outage
-> could be more like a murder mystery" [@honest_update](https://twitter.com/honest_update/status/651897353889259520){:target="_blank"}
+<blockquote class="twitter-tweet" data-lang="de"><p lang="en" dir="ltr">We replaced our monolith with micro services so that every outage could be more like a murder mystery.</p>&mdash; Honest Status Page (@honest_update) <a href="https://twitter.com/honest_update/status/651897353889259520?ref_src=twsrc%5Etfw">7. Oktober 2015</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 A better way would be trying to test your client against actual responses of the server without the server having to be up and running.
 How can you achieve this?
