--- a/_posts/2016/2016-07-26-xconf-2016.md
+++ b/_posts/2016/2016-07-26-xconf-2016.md
@@ -7,6 +7,13 @@ category: events
 authors: ["Oleksandr", "Renato"]
 ---
 
+<style>
+
+.twitter-tweet {
+  margin: auto;
+}
+</style>
+
 It was not long ago, in one of those few sunny days in Hamburg, that we had the opportunity to visit the
 [XConf](https://info.thoughtworks.com/Xconf-hamburg-2016.html){:target="_blank"}. At ePages, developers have a great support of the company in terms of further education.
 The XConf took place on the 12th of July in a cozy place called the [Betahaus](http://hamburg.betahaus.de/){:target="_blank"} in Hamburg.
@@ -43,12 +50,13 @@ One good thing I was able to take away with me, was to see that many companies u
 It was especially interesting to hear about the experience of introducing microservice architecture on such giant environment like [otto.de](http://otto.de){:target="_blank"}
 It is good to know that one of the leaders of the German e-commerce market follows the same principles as we are following in our team.
 
-![](/assets/img/pages/blog/images/blog-twitter-xconf-3.png)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-twitter-xconf-3.png" %}
 
 Another interesting topic was the infrastructure.
 At ePages, we have a quite sophisticated environmental structure.
 To manage this, we are already applying many techniques and tools described by  [Kief Morris](https://twitter.com/kief){:target="_blank"} in his presentation.
 
-![](/assets/img/pages/blog/images/blog-twitter-xconf-4.png)
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The <a href="https://twitter.com/hashtag/InfraAsCode?src=hash&amp;ref_src=twsrc%5Etfw">#InfraAsCode</a> book is out! Ebook now available, Print happening as we speak! <a href="https://t.co/hGOxr7T6Fu">https://t.co/hGOxr7T6Fu</a> <a href="https://t.co/MB9EuuxMhy">https://t.co/MB9EuuxMhy</a></p>&mdash; Kief Morris (@kief) <a href="https://twitter.com/kief/status/742687599576371201?ref_src=twsrc%5Etfw">June 14, 2016</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 It was a nice day at the conference with a lot of input that can make our work more efficient.
