--- a/_posts/2016/2016-09-01-socrates.md
+++ b/_posts/2016/2016-09-01-socrates.md
@@ -27,7 +27,7 @@ At the end of this ice breaker there was a pretty precise idea of what people ar
 
 ## Conference days
 
-{% image_custom image="/assets/img/pages/blog/images/blog-socrates.jpg" width="50" align="right" %}
+{% image_custom image="/assets/img/pages/blog/images/blog-socrates.jpg" width="40" align="right" %}
 
 Friday and Saturday were [open spaces](https://en.wikipedia.org/wiki/Open_Space_Technology){:target="_blank"}.
 Upfront around 15 meeting locations with initially empty time schedules (6x1 hour slots) were prepared as a supportive sessions' frame by the organization team.
@@ -83,7 +83,7 @@ Sunday was reserved for longer workshops:
 
 ## More than the usual conference!
 
-![](/assets/img/pages/blog/images/blog-socrates-group.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-socrates-group.jpg" %}
 
 Giving feedback to session hosts, other participants, or the organization team was quite easy as well: Every attendee received Kudo Cards that they could freely distribute with remarks, why they liked a session, or other things.
 Yet, the best part: The fully equipped conference hotel was located in a big beautiful national park, isolated by a forest from the surrounding world.
