--- a/_posts/2016/2016-10-13-jugsaxony-2016.md
+++ b/_posts/2016/2016-10-13-jugsaxony-2016.md
@@ -73,7 +73,9 @@ Our [talk](http://www.jug-saxony-day.org/programm/#/V45){:target="_blank"} focus
 We slightly enhanced our [slides](https://speakerdeck.com/dataduke/continuous-delivery-pipeline-automated-test-evaluation-jsd2016){:target="_blank"} compared to the talk at the [Karlsruher Entwicklertag](/blog/events/karlsruher-entwicklertag/).
 The feedback from the participants was very positive and some developers talked with us afterwards – highly interested in implementing their own containerized project with Github, CircleCI and Docker Hub.
 
-{% image_custom image="/assets/img/pages/blog/images/blog-jug-saxony-implementation.png" width="100" caption="Our Elasticsearch cluster uses GitHub, CircleCI and Docker Hub for development and delivery" %}
+{% image_lightbox image="/assets/img/pages/blog/images/blog-jug-saxony-implementation.png" %}
+
+Our Elasticsearch cluster uses GitHub, CircleCI and Docker Hub for development and delivery
 
 ## More talks
 
