Fix images for 2015
UC-636

--- a/_posts/2015/2015-09-15-rnd-day-2015.md
+++ b/_posts/2015/2015-09-15-rnd-day-2015.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "R&amp;D Day 2015 in the spotlight"
+title: "R&D Day 2015 in the spotlight"
 date: 2015-09-15
 header_image: research.jpg
 category: tech-stories
@@ -16,7 +16,7 @@ Curtains up for these fantastic topics:
 
 Team Black started the R&amp;D Day presenting their approach on a new software architecture that should be the technical foundation for ePages in the years to come.
 
-![](/assets/img/pages/blog/images/blog-rnd-architecture.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-rnd-architecture.jpg" %}
 
 The following principles drive the teams' work:
 
@@ -41,7 +41,7 @@ Team Red presented the architecture of the App & Theme Store.
 The Store allows merchants to customise the design of their shop with certain themes.
 Furthermore, they can add additional functionalities to their shop by installing apps developed by external developers using the ePages APIs.
 
-![](/assets/img/pages/blog/images/blog-rnd-appstore.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-rnd-appstore.jpg" %}
 
 They explained the different app types, the store currently supports:
 
@@ -50,7 +50,7 @@ They explained the different app types, the store currently supports:
 
 The challenge was to provide an architecture which not only allows external developers to develop and submit their app easily, but also to provide an administration tool for the product management which allows them to distribute the apps to the different providers.
 
-Despite the brief time frame of the session and the complexity of the architecture, Team Red succeeded and presented, in an understandable way, several diagrams and live demos of the different App & Theme Store use cases:
+Despite the brief time frame of the session and the complexity of the architecture, Team Red succeeded and presented, in an understandable way, several diagrams and live demos of the different App Store use cases:
 
 - Developers point of view: How an app developer can submit an app
 - Product Management's point of view: How PM is able to review an app and manage apps for the different shop types
@@ -58,7 +58,7 @@ Despite the brief time frame of the session and the complexity of the architectu
 
 ## Spotlight: New Storefront
 
-![](/assets/img/pages/blog/images/blog-rnd-unity.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-rnd-unity.jpg" %}
 
 Team Unity shared insights on the new storefront and editor.
 They explained how they plan to integrate this into the existing ePages product using the ePages [REST API](/apps/).
@@ -96,7 +96,7 @@ Read further here in our blog post [The ePages Selenium Framework](/blog/tech-st
 
 ## Hands-on: Writing tests
 
-![](/assets/img/pages/blog/images/blog-rnd-tests.jpg)
+{% image_lightbox image="/assets/img/pages/blog/images/blog-rnd-tests.jpg" %}
 
 In line with the Test Automation lecture, Team Ocean did a nice workshop session on writing tests.
 They dealt with:
