Fix ampersand issue

--- a/_posts/2015/2015-09-15-rnd-day-2015.md
+++ b/_posts/2015/2015-09-15-rnd-day-2015.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "R&D Day 2015 in the spotlight"
+title: "R&amp;D Day 2015 in the spotlight"
 date: 2015-09-15
 header_image: research.jpg
 category: tech-stories
@@ -8,7 +8,7 @@ authors: ["Birgit"]
 ---
 
 ePages developers from all company locations convened in Hamburg to spend an amazing time together on software development topics!
-It was all about interesting lectures and workshops, healthy discussions and knowledge transfer among different teams of the Research & Development department.
+It was all about interesting lectures and workshops, healthy discussions and knowledge transfer among different teams of the Research &amp; Development department.
 
 Curtains up for these fantastic topics:
 
