Update tagging categories 2017 (#173)
* Add first bunch of tags
* Add missing tag
* Add second bunch. Change e-commerce to ecommerce.
* Add third bunch
* Add last bunch of tags and change categories
* Add last change
* Change name back
* Change link
* Add review changes

--- a/_posts/2017/2017-05-16-ia-conference-2017.md
+++ b/_posts/2017/2017-05-16-ia-conference-2017.md
@@ -4,6 +4,7 @@ title: "Review of IA Conference 2017"
 date: 2017-05-16
 header_image: iaconf.jpg
 category: events
+tags: ["ux", "information architecture", "smart devices", "conference"]
 authors: ["Lena B."]
 ---
 
