--- a/_posts/2016/2016-05-20-geecon.md
+++ b/_posts/2016/2016-05-20-geecon.md
@@ -96,7 +96,8 @@ Tomer Gabel talked about Wix's very pragmatic microservice architecture that can
 
 The 900km trip from Hamburg to Kraków was really worth it and I enjoyed it a lot - not only because of the conference but also because Kraków has a lot to offer and is well worth a trip on its own.
 
-![](/assets/img/pages/blog/images/blog-geecon-1.jpg)
+{% image_custom image="/assets/img/pages/blog/images/blog-geecon-1.jpg" width="50" lightbox %}
+
 
 So if you go there make sure you have a walk at the Vistula River, take a look at [Wawel Castle](http://www.wawel.krakow.pl/en/){:target="_blank"} and have a Kasztelan beer in the beautiful Stare Miasto - Kraków's historic old city centre - which is part of the [UNESCO World Heritage](http://whc.unesco.org/en/list/29){:target="_blank"}.
 
