Include tagging for blog search functionality
UC-738

--- a/_posts/2016/2016-05-20-geecon.md
+++ b/_posts/2016/2016-05-20-geecon.md
@@ -4,6 +4,7 @@ title: "GeeCON Kraków"
 date: 2016-05-20
 header_image: geecon.jpg
 category: events
+tags: ["conference", "microservices", "java", "delivery"]
 authors: ["Mathias"]
 ---
 
