--- a/_posts/2016/2016-05-25-spring-io.md
+++ b/_posts/2016/2016-05-25-spring-io.md
@@ -4,6 +4,7 @@ title: "Spring I/O 2016"
 date: 2016-05-25
 header_image: springio.jpg
 category: events
+tags: ["conference", "java", "spring boot"]
 authors: ["Xavi"]
 ---
 On 19th and 20th of May, the *Spring I/O* conference took place in Barcelona. It was the 5th edition of an event whose goal is to spread the word about the well-known framework [Spring](https://spring.io/){:target="_blank"} and, more importantly, the ecosystem around it. Luckily, four *ePagees* including myself had the chance to attend the conference.
