--- a/_posts/2016/2016-07-26-xconf-2016.md
+++ b/_posts/2016/2016-07-26-xconf-2016.md
@@ -4,6 +4,7 @@ title: "Review of XConf 2016 Hamburg"
 date: 2016-07-26
 header_image: lego.jpg
 category: events
+tags: ["conference", "microservices", "containers"]
 authors: ["Oleksandr", "Renato"]
 ---
 
