--- a/_posts/2016/2016-09-23-rnd-day-2016.md
+++ b/_posts/2016/2016-09-23-rnd-day-2016.md
@@ -4,6 +4,7 @@ title: "ePages R&amp;D Day 2016"
 date: 2016-09-23
 header_image: roadmap.jpg
 category: events
+tags: ["agile", "scrum", "roadmap", "software", "team"]
 authors: ["Birgit"]
 ---
 
