--- a/_posts/2016/2016-07-14-wiremock.md
+++ b/_posts/2016/2016-07-14-wiremock.md
@@ -4,6 +4,7 @@ title: "How to make microservice testing great again"
 date: 2016-07-14
 header_image: balls-of-mud.jpg
 category: tech-stories
+tags: ["microservices", "testing", "api", "spring"]
 authors: ["Oliver T."]
 ---
 
