--- a/_posts/2016/2016-09-01-socrates.md
+++ b/_posts/2016/2016-09-01-socrates.md
@@ -4,6 +4,7 @@ title: "SoCraTes 2016"
 date: 2016-09-01
 header_image: craftsmanship.jpg
 category: events
+tags: ["conference", "git", "monitoring", "java", "testing"]
 authors: ["Benjamin", "Oliver Z."]
 ---
 
