--- a/_posts/2016/2016-10-13-jugsaxony-2016.md
+++ b/_posts/2016/2016-10-13-jugsaxony-2016.md
@@ -4,6 +4,7 @@ title: "JUG Saxony Day 2016"
 date: 2016-10-13
 header_image: coffeebeans.jpg
 category: events
+tags: ["conference", "java", "jdk", "modularization", "elasticsearch"]
 authors: ["Benjamin"]
 ---
 
