Add second bunch to private folder

--- a/_posts/2015/2015-11-27-seokomm-2015.md
+++ b/_posts/2015/2015-11-27-seokomm-2015.md
@@ -2,7 +2,7 @@
 layout: post
 title: "SEOkomm 2015 Retrospective"
 date: 2015-11-27
-header_image: public/seokomm.jpg
+header_image: private/seokomm.jpg
 category: events
 authors: ["Björn"]
 ---
