--- a/_posts/2016/2016-05-20-geecon.md
+++ b/_posts/2016/2016-05-20-geecon.md
@@ -2,7 +2,7 @@
 layout: post
 title: "GeeCON Kraków"
 date: 2016-05-20
-header_image: public/geecon.jpg
+header_image: private/geecon.jpg
 category: events
 tags: ["conference", "microservices", "java", "delivery"]
 authors: ["Mathias"]
