Add third bunch of images to private folder

--- a/_posts/2016/2016-09-23-rnd-day-2016.md
+++ b/_posts/2016/2016-09-23-rnd-day-2016.md
@@ -2,7 +2,7 @@
 layout: post
 title: "ePages R&amp;D Day 2016"
 date: 2016-09-23
-header_image: public/roadmap.jpg
+header_image: private/roadmap.jpg
 category: events
 tags: ["agile", "scrum", "roadmap", "software", "team"]
 authors: ["Birgit"]
