Add tags to 2015 posts

--- a/_posts/2015/2015-09-15-rnd-day-2015.md
+++ b/_posts/2015/2015-09-15-rnd-day-2015.md
@@ -4,7 +4,8 @@ title: "R&amp;D Day 2015 in the spotlight"
 date: 2015-09-15
 header_image: public/research.jpg
 header_overlay: true
-category: tech-stories
+category: events
+tags: ["architecture", "software", "team", "docker", "api"]
 authors: ["Birgit"]
 ---
 
