--- a/_posts/2015/2015-11-30-wjax2015-agile-day.md
+++ b/_posts/2015/2015-11-30-wjax2015-agile-day.md
@@ -4,6 +4,7 @@ title: "W-JAX 2015 Retrospect Part 1: Agile Day"
 date: 2015-11-30
 header_image: public/wjax-conf.jpg
 category: events
+tags: ["conference", "devops", "agile"]
 authors: ["Silvio"]
 ---
 
