--- a/_posts/2015/2015-09-02-barcamp-kiel-2015.md
+++ b/_posts/2015/2015-09-02-barcamp-kiel-2015.md
@@ -4,6 +4,7 @@ title: "BarCamp Kiel 2015 - A short review"
 date: 2015-09-02
 header_image: public/barcamp-kiel.jpg
 category: events
+tags: ["conference", "barcamp", "jenkins", "gamification"]
 authors: ["David"]
 ---
 
