--- a/_posts/2015/2015-11-27-seokomm-2015.md
+++ b/_posts/2015/2015-11-27-seokomm-2015.md
@@ -4,6 +4,7 @@ title: "SEOkomm 2015 Retrospective"
 date: 2015-11-27
 header_image: private/seokomm.jpg
 category: events
+tags: ["seo", "web technology", "conference"]
 authors: ["Björn"]
 ---
 
