--- a/_posts/2018/2018-03-27-cto-post.md
+++ b/_posts/2018/2018-03-27-cto-post.md
@@ -2,9 +2,9 @@
 layout: post
 title: CTO blog post
 date: 2018-02-01
-header_image: public/
+header_image:
 category: tech-stories
-tags: []
+tags: [CTO]
 authors: ["Harm"]
 ---
 
@@ -39,13 +39,10 @@ That's why we've decided to go with an "API-first" approach, which allows us to 
 
 ## Set it on a solid ground
 
-This flexibility is also secured by our development infrastructure.
-For one thing, we decoupled frontend and backend into several Scrum teams.
-Secondly, we organized functions around capabilities, which means that XXX.
-- to enforces a modular structure
+This flexibility is based on architecture that decouples frontend and backend as well as organizing functions around capabilities, which enforces a modular structure.
 
 Furthermore, we make use of the latest tech stack by changing towards a Java and JavaScript ecosystem and providing operational abstraction by Docker and Kubernetes.
-Working with open source frameworks rounds it off, as they allow us to “stand on the shoulders of giants”.
+Working with open source frameworks rounds everything off, as it allows us to “stand on the shoulders of giants”.
 
 ### Based on microservices
 
