--- a/_posts/2018/2018-03-27-cto-post.md
+++ b/_posts/2018/2018-03-27-cto-post.md
@@ -1,10 +1,11 @@
 ---
 layout: post
 title: CTO blog post
-date: 2018-02-01
-header_image:
+date: 2018-03-27
+header_image: private/hackathon-2018.jpg
+header_position: center
 category: tech-stories
-tags: [CTO]
+tags: ["CTO"]
 authors: ["Harm"]
 ---
 
