--- a/_posts/2018/2018-03-27-cto-post.md
+++ b/_posts/2018/2018-03-27-cto-post.md
@@ -27,61 +27,44 @@ The easiest way to do so, is via APIs - more or less standardized interfaces, wh
 ### The past was different
 
 As many other companies, ePages started the millennium with a monolith approach that we enhanced and enriched over time.
-This means that we at the end offered some awkward functions like a holiday-appartment reservation tool - although being an ecommerce system.
+This means that, in the end, we offered some awkward functions like a holiday-appartment reservation tool - although being an ecommerce system.
 That way our old stack became overloaded and lead to many dependencies.
-Our monolith became more and more complicated to maintain, and we started spending too much time on keeping stuff running instead of creating business value!
-Although it delivers good performance and is still heavily used and liked by our merchants, it's architecture is definitely outdated.
+Our monolith became more and more complicated to maintain, and we started spending too much time on keeping stuff running instead of creating business value.
+Additionally, although it delivers good performance and is still heavily used and liked by our merchants, it's architecture is definitely outdated.
 
 ### New architecture needed
 
 Thus, our goal was to build a developer-friendly platform, that is easy to change and to maintain.
-We want to focuses on our core functionality - ecommerce - and get the above-mentioned toppings from other specialists.
-That's why we've decided to go with an "API-first" approach, which allows us to be flexible - whatever may be needed in the future.
+We wanted to focus on our core functionality - ecommerce - and get the above-mentioned toppings from other specialists.
+That's why we've decided to go with an API-first approach, which allows us to be flexible - whatever may be needed in the future.
 
 ## Set it on a solid ground
 
-This flexibility is based on architecture that decouples frontend and backend as well as organizing functions around capabilities, which enforces a modular structure.
+This flexibility is on the one hand based on an architecture that decouples frontend and backend and on the other hand on an organization of functions around capabilities, which enforces a modular structure.
 
-Furthermore, we make use of the latest tech stack by changing towards a Java and JavaScript ecosystem and providing operational abstraction by Docker and Kubernetes.
+Furthermore, we make use of the latest tech stack by changing towards a Java and JavaScript ecosystem and providing operational abstraction with Docker and Kubernetes.
 Working with open source frameworks rounds everything off, as it allows us to “stand on the shoulders of giants”.
 
 ### Based on microservices
 
-Technically we chose microservices, which give us the advantages of
+Technically, we chose microservices, which give us the advantage of working with single deployable units.
+Every microservice owns its respective data and is exclusively responsible for its services and entities.
+The communication between these microservices is either assured by a REST-API or asynchronous messaging.
+This setup allows us a freedom of choice concerning micro architecture and language so every team can work in it's preferred environment.
 
-- single deployable units
-- which owns its data
-- communicate via REST-API or asynchronous messaging
-- Exclusively responsible for its services and entities
-- Provides a REST-API to leverage access to its functions
-- (Freedom) of choice for micro architecture and language
-
-### Results
-
-As a result we have an SaaS ecommerce platform based on microservices and divided by typical ecom-domains like products, orders, customers …
-
-And the team organisation is aligned to that structure in the meaning of one teams owns n-services (1:n) which allow decentral
-
-- Drive innovation
-- Avoid dependency and complexity
-- gives high flexibility
-- allows easy to replacement of services, which are "small in size"
+As a result, we've built an SaaS ecommerce platform based on microservices and divided into typical ecommerce domains like products, orders, and customers.
+The team organization is aligned to that structure in the meaning of one team owns n-services (1:n).
+This decentral distribution avoids dependencies between the single services and reduces complexity.
+Furthermore, it offers a high flexibility and allows us to easily replace or add services.
 
 ### Additional target groups
 
-The API-first-approach not only gives us the back the "freedom to develop" and have fun, but allows us to open up other target groups by connecting to other "systems", e.g. integrations
-
-- Blog/CMS
-- ERP
-- ... (siehe Cockpit-Chart)
-
-Nearly everyone, who enriches us or vice versa and can connect via API
-
-Furthermore we give freelancers, agencies, partners the ability to concentrate on their customer contact and sell apropiate services, while getting all ecommerce functionalities by our SaaS-Ecommerce-Platform (Beyond), ... see belows infographic
+Our API-first approach not only gives us back the "freedom to develop" and have fun doing so, but also allows us to open up different target groups by connecting to other systems.
+Nearly everyone, who enriches us or vice versa, can connect via API, as you can see below:
 
 INFOGRAPHIC
 
-Target groups and possibilities:
-Allow freelancers, partners and 3rd parties to integrate with ePages
-Simple guide for developers to create apps or custom integrations
-Provide an always up-to-date source of information that you can easily start with (e.g. Taggle)
+Depending on your plans and customers, we offer different API-packages (1, 5, or 10 shops) to create the best possible starting point for you.
+Freelancers, agencies, and partners are able to concentrate on their customer contact and sell appropiate services, while getting all ecommerce functionalities by our SaaS-Ecommerce-Platform Beyond.
+Furthermore, we offer a simple guide for developers to create apps or custom integrations.
+So in summary, we provide an always up-to-date source of information that everyone can easily interact with.
