--- a/_posts/2018/2018-03-27-cto-post.md
+++ b/_posts/2018/2018-03-27-cto-post.md
@@ -62,9 +62,8 @@ Furthermore, it offers a high flexibility and allows us to easily replace or add
 Our API-first approach not only gives us back the "freedom to develop" and have fun doing so, but also allows us to open up different target groups by connecting to other systems.
 Nearly everyone, who enriches us or vice versa, can connect via API, as you can see below:
 
-INFOGRAPHIC
+{% image_custom image="/assets/img/pages/blog/images/blog-infographic.jpg" width="50" lightbox %}
 
-Depending on your plans and customers, we offer different API-packages (1, 5, or 10 shops) to create the best possible starting point for you.
 Freelancers, agencies, and partners are able to concentrate on their customer contact and sell appropiate services, while getting all ecommerce functionalities by our SaaS-Ecommerce-Platform Beyond.
 Furthermore, we offer a simple guide for developers to create apps or custom integrations.
 So in summary, we provide an always up-to-date source of information that everyone can easily interact with.
