Links, fixed tags and authors

--- a/_posts/2018/2018-05-24-Jeeconf.md
+++ b/_posts/2018/2018-05-24-Jeeconf.md
@@ -5,27 +5,21 @@ date: '2018-05-24 01:00:00'
 header_image: public/milky-way.jpg
 image-position: bottom
 category: events
-tags:
-- kotlin
-- java
-- jvm
-- spring
-- jeeconf
-authors:
-- Oleksandr
+tags: ["kotlin","java","jvm","spring","jeeconf"]
+authors: ["Oleksandr"]
 ---
 
-This weekend I had a chance to spend a great time with great people, learn something new and get some inspiration on the Jeeconf (LINK to https://jeeconf.com/) in Kyiv. I have to admit that I was a bit skeptical while buying the ticket in advance with not fully defined schedule, but it turned out to be very interesting from the content perspective and very well organized.
+This weekend I had a chance to spend a great time with great people, learn something new and get some inspiration on the [Jeeconf](https://jeeconf.com){:target="_blank"} in Kyiv. I have to admit that I was a bit skeptical while buying the ticket in advance with not fully defined schedule, but it turned out to be very interesting from the content perspective and very well organized.
 
 The conference is being promoted as the largest Java conference in the Eastern Europe. Despite this focus it was still possible to find number of interesting talks in English.
 
-I personally enjoyed talks given by guys from Pivotal. Juergen Hoeller made an overview of Spring framework evolution for last fifteen years starting from the very beginning, covering a bit the release schedule for 2018.
-Josh Long gave a "bootiful" talk showing to the audience how easy is to start prototyping with Spring Boot and how concise and shiny Kotlin code could look like.
+I personally enjoyed talks given by guys from [Pivotal](https://pivotal.io){:target="_blank"}. [Juergen Hoeller](https://twitter.com/sam_brannen/status/572114327311941634){:target="_blank"} made an overview of Spring framework evolution for last fifteen years starting from the very beginning, covering a bit the release schedule for 2018.
+[Josh Long](https://twitter.com/starbuxman){:target="_blank"} gave a "bootiful" talk showing to the audience how easy is to start prototyping with Spring Boot and how concise and shiny Kotlin code could look like.
 
-In Epages we also have an experience using Kotlin, even in production. This powerful language is happily used by several scrum teams for development of backend microservices, that is why I had a personal interest to tracks related to Kotlin.
+In ePages we also have an experience using Kotlin, even in production. This powerful language is happily used by several scrum teams for development of backend microservices, that is why I had a personal interest to tracks related to Kotlin.
 
-Thanks to the presentation from Dmitry Jemerov, Principal Engineer from JetBrains, everyone who has attended his talk knows about the possibility to use Kotlin in multi-platform projects. I believe that this strategic steps will increase amount of developers working with Kotlin in a long run and using it in different areas.
+Thanks to the presentation from [Dmitry Jemerov](https://twitter.com/intelliyole){:target="_blank"}, Principal Engineer from [JetBrains](https://www.jetbrains.com){:target="_blank"}, everyone who has attended his talk knows about the possibility to use Kotlin in multi-platform projects. I believe that this strategic steps will increase amount of developers working with Kotlin in a long run and using it in different areas.
 
-I was also excited to visit the BOF session https://en.wikipedia.org/wiki/Birds_of_a_feather_(computing) with a very noticeable title "Kotlin: new silver bullet or the future", where every one had a change to ask question not only related to the programming language, but also about the company standing behind it. The BOF session was prolonged due to the high interest from the audience rising questions pretty actively. This format of a meeting is a great opportunity for everyone to have an easy access to the key people of the software industry get some insights and details about key decision made in the past, as well as get know plans for future.
+I was also excited to visit so called ["Birds of a feather"](https://en.wikipedia.org/wiki/Birds_of_a_feather_%28computing%29) with a very noticeable title "Kotlin: new silver bullet or the future", where every one had a change to ask question not only related to the programming language, but also about the company standing behind it. The BOF session was prolonged due to the high interest from the audience rising questions pretty actively. This format of a meeting is a great opportunity for everyone to have an easy access to the key people of the software industry get some insights and details about key decision made in the past, as well as get know plans for future.
 
 That was a great time, looking forward for the next year event!
